crates/parse/src/snapshots/parse2__tests__parse_inline_err@0001_record_no_close.tip.snap
---
source: crates/parse2/src/tests.rs
description: "{ x: 1, y: 2\n"
input_file: crates/parse2/test_data/parse/inline/err/exp/0001_record_no_close.tip
---
ParseError: Expected RBrace, found Eof
