crates/parse/src/snapshots/parse2__tests__parse_inline_err@0002_record_no_comma.tip.snap
---
source: crates/parse2/src/tests.rs
description: "{ x: 1 y: 2 z: 3 }\n"
input_file: crates/parse2/test_data/parse/inline/err/exp/0002_record_no_comma.tip
---
ParseError: Expected Comma, found Id
