crates/parse/src/snapshots/parse2__tests__parse_inline_err@0003_ref_exp_no_id.tip.snap
---
source: crates/parse2/src/tests.rs
description: "&1\n"
input_file: crates/parse2/test_data/parse/inline/err/exp/0003_ref_exp_no_id.tip
---
ParseError: Can only take reference of id
