crates/parse/src/snapshots/parse2__tests__parse_inline_err@0004_non_exp.tip.snap
---
source: crates/parse2/src/tests.rs
description: "var x;\n"
input_file: crates/parse2/test_data/parse/inline/err/exp/0004_non_exp.tip
---
ParseError: Expected expression
