crates/parse/src/snapshots/parse2__tests__parse_inline_ok@0007_id_exp.tip.snap
---
source: crates/parse2/src/tests.rs
description: "x\n"
input_file: crates/parse2/test_data/parse/inline/ok/exp/0007_id_exp.tip
---
Id(Id("x"))
