crates/parse/src/snapshots/parse2__tests__parse_inline_ok@0008_int_exp.tip.snap
---
source: crates/parse2/src/tests.rs
description: "1\n"
input_file: crates/parse2/test_data/parse/inline/ok/exp/0008_int_exp.tip
---
Int(1)
